--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_bloc: ^8.0.1
-  shared_preferences: ^2.0.12
+  flutter_bloc: ^8.1.2
+  bloc: ^8.1.1
+  shared_preferences: ^2.1.0
   conditional_builder_null_safety: ^0.0.6
-  dio: ^4.0.4
+  dio: ^5.1.1
+  image_picker: ^0.8.7+4
+
+
 
 
 
@@ -65,8 +69,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
